# mpi-project

./: .gitignore  CMakeLists.txt  CMakePlatform.cmake  README.md  main.cpp
.env/: pip-selfcheck.json
data/: aggregation.csv  birch.csv  birch3.csv  iris.csv  out.csv  r15.csv  s4.csv  target.csv  viewer.py
src/: CMakeLists.txt
src/core/: CMakeLists.txt  main.cpp
src/core/private/: csv.cpp  data.cpp
src/core/private/async/: mpi.cpp
src/core/public/: cluster.h  core_types.h  csv.h  data.h  kmeans.h  point.h  utils.h
src/core/public/apple/: apple_platform.h
src/core/public/async/: mpi.h  omp.h
src/core/public/containers/: array.h  string.h
src/core/public/generic/: generic_platform.h
src/core/public/hal/: platform.h
src/core/public/templates/: enable_if.h  is_array.h  is_pointer.h  is_trivial.h  singleton.h
src/core/public/unix/: unix_platform.h
src/kmeans/: CMakeLists.txt  main.cpp
src/kmeans/private/: README.md  dummy.cpp
src/kmeans/private/parallel/: mpi_globals.cpp
src/kmeans/private/utils/: command_line.cpp
src/kmeans/public/: README.md  coremin.h
src/kmeans/public/alg/: data.h  kmeans.h  node.h  vector.h
src/kmeans/public/apple/: apple_platform.h
src/kmeans/public/containers/: aligned_array.h
src/kmeans/public/generic/: generic_platform.h
src/kmeans/public/parallel/: mpi.h  mpi_device.h  mpi_globals.h  omp.h  threading.h
src/kmeans/public/templates/: const_ref.h  is_trivially_copyable.h  is_void.h  simd.h
src/kmeans/public/unix/: unix_platform.h
src/kmeans/public/utils/: command_line.h  csv_parser.h  csv_writer.h  utils.h
src/kmeans/public/windows/: windows_platform.h
src/mpi-project/: CMakeLists.txt  main.cpp
src/mpi-project/private/mpi/: mpi_globals.cpp
src/mpi-project/private/utils/: command_line.cpp
src/mpi-project/public/: core_types.h
src/mpi-project/public/apple/: apple_platform.h
src/mpi-project/public/containers/: array.h  cluster.h  point.h  point_simd.h
src/mpi-project/public/generic/: generic_system_includes.h
src/mpi-project/public/hal/: platform.h  platform_crt.h
src/mpi-project/public/mpi/: mpi_globals.h  node.h
src/mpi-project/public/omp/: critical_section.h
src/mpi-project/public/templates/: const_ref.h  enable_if.h  is_trivially_copyable.h  is_void.h  max.h  min.h  simd.h  simd_double.h  simd_float.h  singleton.h
src/mpi-project/public/unix/: unix_platform.h  unix_system_includes.h
src/mpi-project/public/utils/: command_line.h  csv_parser.h  csv_writer.h  data_generator.h  scoped_lock.h
src/public/: core_types.h  local_centroid.hpp  node.hpp  point.hpp  utils.hpp
